--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -18,7 +18,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest .
+
+      - name: Push Docker image to DockerHub
+        run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-demo:latest
